syntax = "proto3";

package stream;

option go_package = "github.com/chirpstack/chirpstack/api/go/v4/stream";
option java_package = "io.chirpstack.api.stream";
option java_multiple_files = true;
option java_outer_classname = "ApiRequestProto";
option csharp_namespace = "Chirpstack.Stream";

import "google/protobuf/timestamp.proto";
import "chirpstack-api/common/common.proto";
import "chirpstack-api/gw/gw.proto";

message ApiRequestLog {
  // API service name.
  string service = 1;

  // API method name.
  string method = 2;

  // Metadata.
  map<string, string> metadata = 3;
}
